styles: Allow scrolling the sidebar when fixed
Allow scrolling the sidebar when its position is fixed, to be able to view
long attribute lists that would not fit to the screen otherwise.

app/styles/styles.scss:
  #sidebar.visible.fixed: Set max-height relative to viewport height and
    overflow to "auto".

app/styles/styles.css:
  Compiled file.

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -1148,6 +1148,12 @@ table {
     right: 8px;
     position: fixed;
     top: 8px;
+    // Maximum height at most the viewport height, which combined with
+    // "overflow: auto" gives a scorllbar if the content does not fit
+    // to the div otherwise. Note: this does not work on older
+    // browsers (how old?). (Jyrki Niemi 2015-08-27)
+    max-height: calc(100vh - 16px);
+    overflow: auto;
   }
   &:empty {
     padding: 0;
